--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,19 @@
-<p>navbar works!</p>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a id="nav-index" class="navbar-brand" routerLink="">Hogwarts Database</a>
+    <!-- link to / -->
+    <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navbar" class="navbar-collapse collapse">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <a routerLink="wizards" class="nav-link" id="wizard-list-link">Wizards</a>
+                <!-- link to /wizards -->
+            </li>
+            <li class="nav-item">
+                <a routerLink="wands" class="nav-link" id="wands-list-link">Wands</a>
+                <!-- link to /wands -->
+            </li>
+        </ul>
+    </div>
+</nav>
