--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<p>page-not-found works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">404</h1>
+        <p class="lead">Page not found, there must be some very strong concealing magic around it...</p>
+    </div>
+</div>
